--- a/packages/storybook-email/stories/email-guidelines/email-guidelines.mdx
+++ b/packages/storybook-email/stories/email-guidelines/email-guidelines.mdx
@@ -10,46 +10,52 @@ These guidelines help us ensure we maintain brand consistency and compliance in 
 
 These styles define the look and feel of your email, including recommended fonts, colours, and link treatments for a cohesive and professional appearance.
 
-| Item                          | Styles                                                                                                                                                                                             |
-| :---------------------------- | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| **Headings** | **Colour:** #19151c <br /> **Font:** Roboto (if not available use Arial) <br /> **Font weight:** Bold <br /> **Font sizes:** <br /> Heading 1 – 32px <br /> Heading 2 – 24px <br /> Heading 3 - 18px |
-| **Body copy (min size 16px)** | **Colour:** #3b383e <br /> **Font:** Roboto (if not available use Arial) <br /> **Font weight:** Regular / normal <br /> **Font size:** 16px                                                          |
-| **Links** | **Colour:** #51247a (UQ purple) <br /> **Font:** Roboto, Arial <br /> **Font weight:** Regular / normal <br /> **Text decoration:** Underline                                                       |
-| **Link style on UQ purple background** | **Colour:** #FFFFFF                                                                                                                                                                                |
-| **Buttons** |                                                                                                                                                                                                    |
-| &nbsp;&nbsp;&nbsp;Primary button | **Background colour:** #51247a <br /> **Font colour:** #FFFFFF                                                                                                                                       |
-| &nbsp;&nbsp;&nbsp;Secondary button | **Background colour:** #FFFFFF <br /> **Font colour:** #51247a <br /> **Border colour:** #51247a                                                                                                    |
-| **Button styles on UQ purple background** |                                                                                                                                                                                                    |
-| &nbsp;&nbsp;&nbsp;Primary button | **Background colour:** #FFFFFF <br /> **Font colour:** #51247a                                                                                                                                       |
-| &nbsp;&nbsp;&nbsp;Secondary button | **Background colour:** #51247a <br /> **Font colour:** #FFFFFF <br /> **Border colour:** #FFFFFF                                                                                                    |
+| Item                                      | Styles                                                                                                                                                                                               |
+| :---------------------------------------- | :--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| **Headings**                              | **Colour:** #19151c <br /> **Font:** Roboto (if not available use Arial) <br /> **Font weight:** Bold <br /> **Font sizes:** <br /> Heading 1 – 32px <br /> Heading 2 – 24px <br /> Heading 3 - 18px |
+| **Body copy (min size 16px)**             | **Colour:** #3b383e <br /> **Font:** Roboto (if not available use Arial) <br /> **Font weight:** Regular / normal <br /> **Font size:** 16px                                                         |
+| **Links**                                 | **Colour:** #51247a (UQ purple) <br /> **Font:** Roboto, Arial <br /> **Font weight:** Regular / normal <br /> **Text decoration:** Underline                                                        |
+| **Link style on UQ purple background**    | **Colour:** #FFFFFF                                                                                                                                                                                  |
+| **Buttons**                               |                                                                                                                                                                                                      |
+| &nbsp;&nbsp;&nbsp;Primary button          | **Background colour:** #51247a <br /> **Font colour:** #FFFFFF                                                                                                                                       |
+| &nbsp;&nbsp;&nbsp;Secondary button        | **Background colour:** #FFFFFF <br /> **Font colour:** #51247a <br /> **Border colour:** #51247a                                                                                                     |
+| **Button styles on UQ purple background** |                                                                                                                                                                                                      |
+| &nbsp;&nbsp;&nbsp;Primary button          | **Background colour:** #FFFFFF <br /> **Font colour:** #51247a                                                                                                                                       |
+| &nbsp;&nbsp;&nbsp;Secondary button        | **Background colour:** #51247a <br /> **Font colour:** #FFFFFF <br /> **Border colour:** #FFFFFF                                                                                                     |
 
 ## Assets
 
 These assets form the core layout of your email, including the header, footer, and other essential structural elements.
 
 ### Header
+
 Used across all UQ emails.
 Includes the UQ logo, linking to the UQ homepage, and a ‘View in browser’ link that opens the email in the user’s browser for easier viewing.
 
 ### Sub-header
+
 Use this for faculty or school emails to display the faculty or school name.
 
 ### Hero image
+
 Optional – use only if it adds value, enhances engagement, or supports the email’s purpose.
 Avoid using the UQ graphic device (purple wave graphic that aligns flush with the bottom edge of the hero image).
 
 **Image sizing**
-* Large hero images are standard for Salesforce emails and can also be used in Oracle/Vision6 when appropriate.
-* Small hero image is recommended for Oracle/Vision 6.
-* Include example of mobile display in guidelines to demonstrate different size displays for each image size.
+
+- Large hero images are standard for Salesforce emails and can also be used in Oracle/Vision6 when appropriate.
+- Small hero image is recommended for Oracle/Vision 6.
+- Include example of mobile display in guidelines to demonstrate different size displays for each image size.
 
 ### Icons
+
 Using icons can help improve comprehension by providing clear visual cues that highlight key points, break up large blocks of text, and guide the reader’s eye.
 
 We recommend using only the brand-approved icons listed below.
-* Calendar
-* Location
-* Time
+
+- Calendar
+- Location
+- Time
 
 Include icons for download in Storybook?
 Guidance on icons? - current icons have been customised to work for dark mode.
@@ -57,54 +63,64 @@ Guidance on icons? - current icons have been customised to work for dark mode.
 ### Footer
 
 #### General footer
+
 Used across all UQ emails.
 Includes:
-* Acknowledgement of Country
-* CRICOS
-* TEQSA
-* UQ’s Privacy Policy
+
+- Acknowledgement of Country
+- CRICOS
+- TEQSA
+- UQ’s Privacy Policy
 
 #### Mailing list footer
+
 Used for mailing list emails.
 Includes:
-* Acknowledgement of Country
-* CRICOS
-* TEQSA
-* UQ's marketing consent and privacy notice.
-* Unsubscribe text must specify which mailing list the user is unsubscribing from.
+
+- Acknowledgement of Country
+- CRICOS
+- TEQSA
+- UQ's marketing consent and privacy notice.
+- Unsubscribe text must specify which mailing list the user is unsubscribing from.
 
 #### Mailing list footer – Vision 6
+
 Emails sent via Vision 6 will have the unsubscribe section hardcoded into the footer.
 Add example image.
 
 #### Contact footer
+
 Includes the sender’s contact details to clearly identify the source of the email.
 Minimum requirements:
-* Contact name
-* Email address or link to an enquiry form
-Include image example here of contact footer variations.
+
+- Contact name
+- Email address or link to an enquiry form
+  Include image example here of contact footer variations.
 
 ## Structure
-(*denotes min required contact methods)
 
-| Example                        |                                          |
-| :----------------------------- | :--------------------------------------- |
-| \*Contact [area/faculty name]  | Contact EAIT Faculty                     |
-| Contact hours (include time zone) | Monday to Friday 8:30am–4:30pm AEST      |
-| Phone number ( Incl country code) | +61 7 3365 4666                          |
-| \*Email address or link to an enquiry form | enquiries@eait.uq.edu.au                 |
-| Website                        | uq.edu.au                                |
+(\*denotes min required contact methods)
+
+| Example                                    |                                     |
+| :----------------------------------------- | :---------------------------------- |
+| \*Contact [area/faculty name]              | Contact EAIT Faculty                |
+| Contact hours (include time zone)          | Monday to Friday 8:30am–4:30pm AEST |
+| Phone number ( Incl country code)          | +61 7 3365 4666                     |
+| \*Email address or link to an enquiry form | enquiries@eait.uq.edu.au            |
+| Website                                    | uq.edu.au                           |
 
 ## Social links
+
 Different social links are displayed according to the audience group. Refer to the table below for specific guidelines.
 
-| Audience                                  | Social links                                                                                                                                                                                                                                                               |
-| :---------------------------------------- | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| **Domestic & International** <br /> All audiences (except current students) | Must display listed social links. <br /> https://www.facebook.com/uniofqld <br /> https://www.linkedin.com/school/university-of-queensland/ <br /> https://x.com/uq_news <br /> https://www.youtube.com/user/universityqueensland  <br /> https://www.instagram.com/uniofqld/ <br /> https://www.tiktok.com/@uniofqld |
-| **International only** <br /> All audiences (except current students)    | Must display listed social links. <br /> https://www.facebook.com/uniofqld <br /> https://www.linkedin.com/school/university-of-queensland/ <br /> https://www.youtube.com/user/universityqueensland  <br /> https://www.instagram.com/uniofqld/ <br /> https://www.tiktok.com/@uniofqld <br /> https://weibo.com/myuq <br /> Add Rednote social account when created |
-| **Domestic & International** <br /> Current students                      | Recommended Social links. <br /> Can display custom, faculty specific links. <br /> https://www.facebook.com/uqlife/ <br /> https://www.instagram.com/uqlife/ <br /> https://www.youtube.com/@uqstudentservices/featured  <br /> https://x.com/uq_news          |
+| Audience                                                                    | Social links                                                                                                                                                                                                                                                                                                                                                          |
+| :-------------------------------------------------------------------------- | :-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| **Domestic & International** <br /> All audiences (except current students) | Must display listed social links. <br /> https://www.facebook.com/uniofqld <br /> https://www.linkedin.com/school/university-of-queensland/ <br /> https://x.com/uq_news <br /> https://www.youtube.com/user/universityqueensland  <br /> https://www.instagram.com/uniofqld/ <br /> https://www.tiktok.com/@uniofqld                                                 |
+| **International only** <br /> All audiences (except current students)       | Must display listed social links. <br /> https://www.facebook.com/uniofqld <br /> https://www.linkedin.com/school/university-of-queensland/ <br /> https://www.youtube.com/user/universityqueensland  <br /> https://www.instagram.com/uniofqld/ <br /> https://www.tiktok.com/@uniofqld <br /> https://weibo.com/myuq <br /> Add Rednote social account when created |
+| **Domestic & International** <br /> Current students                        | Recommended Social links. <br /> Can display custom, faculty specific links. <br /> https://www.facebook.com/uqlife/ <br /> https://www.instagram.com/uqlife/ <br /> https://www.youtube.com/@uqstudentservices/featured  <br /> https://x.com/uq_news                                                                                                                |
 
 ### Block footer
+
 Used in non-social/marketing/mailing list emails to separate content from the footer.
 
 ## Content structure
@@ -112,52 +128,63 @@ Used in non-social/marketing/mailing list emails to separate content from the fo
 Properly structuring your content is essential to ensure maximum accessibility and readability for your audience.
 
 ### Intro
+
 The intro should be attention-grabbing and action-oriented, summarising the email’s main message.
 Includes a headline, an optional description and/or call to action.
 
 ### Body section
+
 Clearly communicate the email’s purpose.
 Use headings, lists, and concise paragraphs for better readability.
 Optional – add relevant images to enhance engagement.
 
 ### Content structure
-* Left-align all content.
-* Use sentence case for headings.
-* Follow a clear heading structure.
-* More helpful guidelines on ensuring your content is accessible: [Accessibility author checklist]
+
+- Left-align all content.
+- Use sentence case for headings.
+- Follow a clear heading structure.
+- More helpful guidelines on ensuring your content is accessible: [Accessibility author checklist]
 
 ### Call to actions (CTA)
-* Use a single, prominent CTA button.
-* Use secondary or tertiary style CTAs (ie. outline buttons or text links) for any additional calls to action.
-* Write clear, action-oriented text ie. ‘Book a call back’ rather than ‘Learn more’.
+
+- Use a single, prominent CTA button.
+- Use secondary or tertiary style CTAs (ie. outline buttons or text links) for any additional calls to action.
+- Write clear, action-oriented text ie. ‘Book a call back’ rather than ‘Learn more’.
 
 ### Imagery
-* Optional – include images only if they add value to the content and align with the email’s purpose.
-* Use images from the UQ Digital Asset Management (DAM) system. If you need to source images from elsewhere, you must obtain approval from the M&C Brand team: brand@uq.edu.au
-* Avoid embedding text within images to maintain accessibility (exceptions to this must be approved by the M&C Brand team: brand@uq.edu.au).
-* Include descriptive alternative text to ensure accessibility and meaningful context if images don’t load (avoid generic labels like ‘image’).
+
+- Optional – include images only if they add value to the content and align with the email’s purpose.
+- Use images from the UQ Digital Asset Management (DAM) system. If you need to source images from elsewhere, you must obtain approval from the M&C Brand team: brand@uq.edu.au
+- Avoid embedding text within images to maintain accessibility (exceptions to this must be approved by the M&C Brand team: brand@uq.edu.au).
+- Include descriptive alternative text to ensure accessibility and meaningful context if images don’t load (avoid generic labels like ‘image’).
 
 **Helpful links:**
-* [UQ written style guide]
-* [Accessibility author checklist]
+
+- [UQ written style guide]
+- [Accessibility author checklist]
 
 ## Technical guidelines
 
 Keep these technical guidelines in mind when testing your emails.
 
 ### Ensure mobile-friendly design
+
 A high percentage of users open emails on their mobile devices first. Make sure your email layout is responsive and easy to scan on smaller screens and confirm that images and text scale properly for a condensed format.
 
 ### Write clear preheader text
+
 The preheader is a snippet of text that appears after the subject line in many inboxes. Use it to complement or reinforce the subject line, giving recipients more context before they open the email.
 
 ### Provide a fallback salutation
+
 If personalisation merges fail, include a default greeting (ie. ‘Dear Student’) to maintain a professional and personal tone even if dynamic content doesn’t load.
 
 ### Test emails across multiple email clients and devices
+
 Ensuring consistent formatting and functionality across different email clients (such as Gmail and Outlook) and platforms (iOS and Android) enhances user experience and credibility. Always conduct thorough cross-platform testing.
 
 ### Plan for images being blocked
+
 Some email providers or users block images by default, include HTML-based text for all critical information. Use alternative text to convey key messages when images don’t display, ensuring recipients still receive important details.
 
 ## To create a new template in Vision6:
@@ -177,6 +204,7 @@ This template can now be selected when creating a new message.
 
 Once a new message has been saved, the correct footer information must be added.
 To do this:
+
 1.  Click **Messages** in left menu.
 2.  Find your message in the list and click the **3-dot icon** on the far right. Then click **Footer details**.
 3.  Copy and paste the footer content from the Design System into the **Sender contact details** area of the Footer Details panel. Click **Save changes**.
