fix: Make linter happy

--- a/packages/storybook-html/stories/components/loading-spinner/loading-spinner.mdx
+++ b/packages/storybook-html/stories/components/loading-spinner/loading-spinner.mdx
@@ -71,12 +71,8 @@ Loading spinners can be used inside certain other components.
 
 ```html
 <button class="uq-button">
-    <i
-      class="uq-loading-spinner"
-      role="alert"
-      aria-live="assertive"
-      ></i>
-    Submit
+  <i class="uq-loading-spinner" role="alert" aria-live="assertive"></i>
+  Submit
 </button>
 ```
 
