fix: remove 300 weight fonts, updated to 400 weight (#594)
* fix: remove 300 weight fonts, updated to 400 weight

* fix: updated font weights

* fixed body weight reference

--- a/packages/storybook-html/stories/components/core/typography.mdx
+++ b/packages/storybook-html/stories/components/core/typography.mdx
@@ -23,14 +23,14 @@ HTML
 <link
   rel="stylesheet"
   type="text/css"
-  href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Roboto:wght@300;400;500&display=swap"
+  href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Roboto:wght@400;500&display=swap"
 />
 ```
 
 CSS
 
 ```css
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Roboto:wght@300;400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Roboto:wght@400;500&display=swap");
 ```
 
 ### Font family stacks
