fix: Hard code class name
Minification causes the class name to change, so we can't use that for
populating headings, etc.

--- a/packages/storybook-react/stories/Components/UqButton/UqButton.mdx
+++ b/packages/storybook-react/stories/Components/UqButton/UqButton.mdx
@@ -3,7 +3,7 @@ import * as stories from "./UqButton.stories";
 
 <Meta of={stories} />
 
-# {stories.default.component.name}
+# UqButton
 
 <Description of={stories} />
 
