--- a/packages/storybook-html/stories/components/acknowledgement/acknowledgement.mdx
+++ b/packages/storybook-html/stories/components/acknowledgement/acknowledgement.mdx
@@ -19,12 +19,12 @@ import * as AcknowledgementStories from "./acknowledgement.stories";
 Cultural and reconciliation statements are used to acknowledge the traditional owners of the land and the importance of reconciliation.
 These statements are used to show respect and recognition of the traditional owners of the land and the importance of reconciliation.
 
-### Cultural Advise
+### Cultural Advice
 
 Cultural statement persistent across all library pages
 
-<Canvas of={AcknowledgementStories.culturalAdvise} />
-<Controls of={AcknowledgementStories.culturalAdvise} />
+<Canvas of={AcknowledgementStories.culturalAdvice} />
+<Controls of={AcknowledgementStories.culturalAdvice} />
 
 ### Reconciliation
 
