feat: Add Hero showcase to React storybook
This provides an example of how to use a custom back link component.

--- a/packages/storybook-react/stories/Components/Hero/Hero.mdx
+++ b/packages/storybook-react/stories/Components/Hero/Hero.mdx
@@ -19,6 +19,12 @@ npm i @uqds/react
 import { Hero } from "@uqds/react";
 ```
 
+## Showcase
+
+<Canvas of={stories.showcase} />
+
+## Properties
+
 <Canvas of={stories.base} />
 
 <Controls of={stories.base} />
