feat: Rename React UqButton to Button

--- a/packages/storybook-react/stories/Components/Button/Button.mdx
+++ b/packages/storybook-react/stories/Components/Button/Button.mdx
@@ -1,9 +1,9 @@
 import { Meta, Canvas, Controls, Description, Source } from "@storybook/blocks";
-import * as stories from "./UqButton.stories";
+import * as stories from "./Button.stories";
 
 <Meta of={stories} />
 
-# UqButton
+# Button
 
 <Description of={stories} />
 
@@ -16,7 +16,7 @@ npm i @uqds/react
 ## Usage
 
 ```js
-import { UqButton } from "@uqds/react";
+import { Button } from "@uqds/react";
 ```
 
 <Canvas of={stories.base} />
