--- a/packages/storybook-html/stories/deprecated/footer-legacy/footer.mdx
+++ b/packages/storybook-html/stories/deprecated/footer-legacy/footer.mdx
@@ -59,7 +59,7 @@ The global footer provides a consistent branding and navigational element across
           Provider No:
           <a
             class="legacy-footer__link cricos__link"
-            href="https://www.uq.edu.au/about/cricos-link"
+            href="https://about.uq.edu.au/cricos-link"
             rel="external"
             >00025B</a
           >
@@ -84,7 +84,7 @@ The global footer provides a consistent branding and navigational element across
             <ul class="legacy-footer__footer-menu__list">
               <li class="legacy-footer__footer-menu__item">
                 <a
-                  href="https://www.uq.edu.au/terms-of-use/"
+                  href="https://uq.edu.au/terms-of-use/"
                   rel="external"
                   class="legacy-footer__footer-menu__link"
                   >Privacy &amp; Terms of use</a
@@ -92,7 +92,7 @@ The global footer provides a consistent branding and navigational element across
               </li>
               <li class="legacy-footer__footer-menu__item">
                 <a
-                  href="https://www.uq.edu.au/rti/"
+                  href="https://uq.edu.au/rti/"
                   rel="external"
                   class="legacy-footer__footer-menu__link"
                   >Right to Information</a
