--- a/packages/storybook-email/stories/design-guidelines/email-guidelines.mdx
+++ b/packages/storybook-email/stories/design-guidelines/email-guidelines.mdx
@@ -1,6 +1,6 @@
 import { Meta, Story, Canvas } from "@storybook/blocks";
 
-<Meta title="Email Guidelines/Template Guidelines" />
+<Meta title="Design guidelines/Email template guidelines" />
 
 # Email template guidelines
 
