--- a/packages/storybook-email/stories/design-guidelines/email-guidelines.mdx
+++ b/packages/storybook-email/stories/design-guidelines/email-guidelines.mdx
@@ -4,16 +4,18 @@ import * as headerStories from "../components/header.stories.js";
 import * as senderHeaderStories from "../components/sender-header.stories.js";
 import * as footerStandardStories from "../components/footer-standard.stories.js";
 import * as footerMailingListStories from "../components/footer-mailing-list.stories.js";
+import * as footerBlockStories from "../components/footer-block.stories.js";
+import * as footerContactStories from "../components/footer-contact.stories.js";
 
 <Meta title="Design guidelines/Email template guidelines" />
 
 # Email template guidelines
 
-These guidelines help us ensure we maintain brand consistency and compliance in student email communications, preserving our brand’s strength and credibility while creating a cohesive experience for our students. 
+These guidelines help us ensure we maintain brand consistency and compliance in student email communications, preserving our brand’s strength and credibility while creating a cohesive experience for our students.
 
 ## Styles
 
-These styles define the look and feel of your email, including recommended fonts, colours, and link treatments for a cohesive and professional appearance.                                                                                                    |
+These styles define the look and feel of your email, including recommended fonts, colours, and link treatments for a cohesive and professional appearance. |
 
 <table width={"100%"}>
   <thead>
@@ -34,8 +36,12 @@ These styles define the look and feel of your email, including recommended fonts
       <td>Bold</td>
       <td>32px</td>
       <td>38px</td>
-      <td class="uqds-colour--black"><span class="uqds-colour--white">#19151c</span></td>
-      <td><h1 class="sb-unstyled uqds-h1">Heading 1</h1></td>
+      <td class="uqds-colour--black">
+        <span class="uqds-colour--white">#19151c</span>
+      </td>
+      <td>
+        <h1 class="sb-unstyled uqds-h1">Heading 1</h1>
+      </td>
     </tr>
     <tr>
       <td>Heading 2</td>
@@ -43,8 +49,12 @@ These styles define the look and feel of your email, including recommended fonts
       <td>Bold</td>
       <td>24px</td>
       <td>29px</td>
-      <td class="uqds-colour--black"><span class="uqds-colour--white">#19151c</span></td>
-      <td><h2 class="sb-unstyled sb-unstyled uqds-h2">Heading 2</h2></td>
+      <td class="uqds-colour--black">
+        <span class="uqds-colour--white">#19151c</span>
+      </td>
+      <td>
+        <h2 class="sb-unstyled sb-unstyled uqds-h2">Heading 2</h2>
+      </td>
     </tr>
     <tr>
       <td>Heading 3</td>
@@ -52,8 +62,12 @@ These styles define the look and feel of your email, including recommended fonts
       <td>Bold</td>
       <td>18px</td>
       <td>22px</td>
-      <td class="uqds-colour--black"><span class="uqds-colour--white">#19151c</span></td>
-      <td><h3 class="sb-unstyled uqds-h3">Heading 3</h3></td>
+      <td class="uqds-colour--black">
+        <span class="uqds-colour--white">#19151c</span>
+      </td>
+      <td>
+        <h3 class="sb-unstyled uqds-h3">Heading 3</h3>
+      </td>
     </tr>
     <tr>
       <td>Body</td>
@@ -61,8 +75,12 @@ These styles define the look and feel of your email, including recommended fonts
       <td>Regular</td>
       <td>16px</td>
       <td>26px</td>
-      <td class="uqds-colour--grey-900"><span class="uqds-colour--white">#3B383E</span></td>
-      <td><p class="sb-unstyled uqds-body">body</p></td>
+      <td class="uqds-colour--grey-900">
+        <span class="uqds-colour--white">#3B383E</span>
+      </td>
+      <td>
+        <p class="sb-unstyled uqds-body">body</p>
+      </td>
     </tr>
     <tr>
       <td>Link</td>
@@ -70,12 +88,17 @@ These styles define the look and feel of your email, including recommended fonts
       <td>Regular</td>
       <td>16px</td>
       <td>26px</td>
-      <td class="uqds-colour--purple-500"><span class="uqds-colour--white">#51274A</span></td>
-      <td><a href="#" class="sb-unstyled uqds-link">Link</a></td>
+      <td class="uqds-colour--purple-500">
+        <span class="uqds-colour--white">#51274A</span>
+      </td>
+      <td>
+        <a href="#" class="sb-unstyled uqds-link">
+          Link
+        </a>
+      </td>
     </tr>
   </tbody>
 </table>
-
 
 ## Assets
 
@@ -91,9 +114,7 @@ Use the primary button to highlight the most important call to action within the
 
 To use this primary button, select the ‘copy’ button in the right corner of the box below to copy the HTML code.
 
-<Canvas of={buttonStories.buttonPrimary} sourceState="shown" />
-
-<Source of={buttonStories.buttonPrimary} />
+<Canvas of={buttonStories.buttonPrimary} />
 
 #### Secondary button
 
@@ -101,7 +122,7 @@ Use the secondary button for important actions that are not the primary call to 
 
 To use this secondary button, select the ‘copy’ button in the right corner of the box below to copy the HTML code.
 
-<Canvas of={buttonStories.buttonSecondary} sourceState="shown" />
+<Canvas of={buttonStories.buttonSecondary} />
 
 ## UQ header
 
@@ -111,9 +132,10 @@ Used across all UQ emails. Includes the UQ logo, linking to the UQ homepage, and
 
 ## Sender header
 
-To help recipients recognise and trust UQ email communications, always use the full name of the area, faculty, school, or office in the sender name, with the acronym in brackets where relevant.  This ensures students can quickly identify the source of the message, particularly when communications come from a faculty, school, division, or central office.
+To help recipients recognise and trust UQ email communications, always use the full name of the area, faculty, school, or office in the sender name, with the acronym in brackets where relevant. This ensures students can quickly identify the source of the message, particularly when communications come from a faculty, school, division, or central office.
 
 Examples:
+
 - Faculty of Engineering, Architecture and Information Technology (EAIT)
 - Faculty of Health, Medicine and Behavioural Sciences (HABS)
 - Business School
@@ -126,9 +148,10 @@ Examples:
 
 ### Standard footer
 
-Used across all UQ emails. 
+Used across all UQ emails.
 
 Includes:
+
 - Acknowledgement of Country
 - CRICOS
 - TEQSA
@@ -141,6 +164,7 @@ Includes:
 Used for mailing list emails.
 
 Includes:
+
 - Acknowledgement of Country
 - CRICOS
 - TEQSA
@@ -148,6 +172,82 @@ Includes:
 - Unsubscribe text must specify which mailing list the user is unsubscribing from.
 
 <Canvas of={footerMailingListStories.footerMailingList} />
+
+### Mailing list footer - Vision 6
+
+Emails sent via Vision 6 will have the unsubscribe section hardcoded into the footer.
+[Instructions on how to add mailing list footer here](#missing).
+
+<Canvas of={footerMailingListStories.footerMailingList} />
+
+### Block footer
+
+Used in emails without a contact footer to clearly separate the main content from the footer section.
+
+<Canvas of={footerBlockStories.footerBlock} />
+
+## Contact Footer
+
+Includes the sender’s contact details to clearly identify the source of the email.
+
+Minimum requirements:
+
+- Contact name
+- Email address or link to an enquiry form
+
+### Oracle
+
+The contact details must be included at the bottom of the email, after the main body of the email in the following format:
+
+Area:
+**Contact UQ Area Name**
+Monday to Friday 8:30am–5pm AEST
+email@uq.edu.au
++617 0000 0000
+Vist UQ Area Name website
+
+Individual (USET or C-suite):
+**Contact**
+email@uq.edu.au
++617 0000 0000
+
+### Vision 6
+
+The senders details must be included within the contact footer component:
+
+<table>
+  <tr>
+    <th>Structure</th>
+    <th>Example</th>
+  </tr>
+  <tr>
+    <td>*Contact (area/faculty name)</td>
+    <td>`Contact EAIT`</td>
+  </tr>
+  <tr>
+    <td>Contact hours (include time zone)</td>
+    <td>`Monday to Friday 8:30am–4:30pm AEST`</td>
+  </tr>
+  <tr>
+    <td>Phone number (include country code)</td>
+    <td>`+61 7 3365 4666`</td>
+  </tr>
+  <tr>
+    <td>*Email address or link to an enquiry form</td>
+    <td>`enquiries@eait.uq.edu.au`</td>
+  </tr>
+  <tr>
+    <td>Website</td>
+    <td>`Visit UQ website`</td>
+  </tr>
+  <tr>
+    <td>Location (use UQ maps URL)</td>
+    <td>`Level 2, Hawken Engineering Building 50, St Lucia Campus`</td>
+  </tr>
+</table>
+(*denotes min required contact methods) 
+
+<Canvas of={footerContactStories.footerContactDomestic} />
 
 **Image sizing**
 
