--- a/packages/storybook-email/stories/design-guidelines/email-guidelines.mdx
+++ b/packages/storybook-email/stories/design-guidelines/email-guidelines.mdx
@@ -13,9 +13,13 @@ import * as footerContactStories from "../components/footer-contact.stories.js";
 
 These guidelines help us ensure we maintain brand consistency and compliance in student email communications, preserving our brand’s strength and credibility while creating a cohesive experience for our students.
 
+To use any of the assets, click 'Show code' in the bottom right corner of the asset, then select 'Copy code' to copy it to your clipboard.
+
 ## Styles
 
-These styles define the look and feel of your email, including recommended fonts, colours, and link treatments for a cohesive and professional appearance. |
+These styles define the look and feel of your email, including recommended fonts, colours, and link treatments for a cohesive and professional appearance
+
+### Heading examples
 
 <table width={"100%"}>
   <thead>
@@ -249,127 +253,74 @@ The senders details must be included within the contact footer component:
 
 <Canvas of={footerContactStories.footerContactDomestic} />
 
-**Image sizing**
-
-- Large hero images are standard for Salesforce emails and can also be used in Oracle/Vision6 when appropriate.
-- Small hero image is recommended for Oracle/Vision 6.
-- Include example of mobile display in guidelines to demonstrate different size displays for each image size.
-
-### Icons
-
-Using icons can help improve comprehension by providing clear visual cues that highlight key points, break up large blocks of text, and guide the reader’s eye.
-
-We recommend using only the brand-approved icons listed below.
-
-- Calendar
-- Location
-- Time
-
-Include icons for download in Storybook?
-Guidance on icons? - current icons have been customised to work for dark mode.
-
-### Footer
-
-#### General footer
-
-Used across all UQ emails.
-Includes:
-
-- Acknowledgement of Country
-- CRICOS
-- TEQSA
-- UQ’s Privacy Policy
-
-#### Mailing list footer
-
-Used for mailing list emails.
-Includes:
-
-- Acknowledgement of Country
-- CRICOS
-- TEQSA
-- UQ's marketing consent and privacy notice.
-- Unsubscribe text must specify which mailing list the user is unsubscribing from.
-
-#### Mailing list footer – Vision 6
-
-Emails sent via Vision 6 will have the unsubscribe section hardcoded into the footer.
-Add example image.
-
-#### Contact footer
-
-Includes the sender’s contact details to clearly identify the source of the email.
-Minimum requirements:
-
-- Contact name
-- Email address or link to an enquiry form
-  Include image example here of contact footer variations.
-
-## Structure
-
-(\*denotes min required contact methods)
-
-| Example                                    |                                     |
-| :----------------------------------------- | :---------------------------------- |
-| \*Contact [area/faculty name]              | Contact EAIT Faculty                |
-| Contact hours (include time zone)          | Monday to Friday 8:30am–4:30pm AEST |
-| Phone number ( Incl country code)          | +61 7 3365 4666                     |
-| \*Email address or link to an enquiry form | enquiries@eait.uq.edu.au            |
-| Website                                    | uq.edu.au                           |
-
-## Social links
+### Social links
 
 Different social links are displayed according to the audience group. Refer to the table below for specific guidelines.
 
-| Audience                                                                    | Social links                                                                                                                                                                                                                                                                                                                                                          |
-| :-------------------------------------------------------------------------- | :-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| **Domestic & International** <br /> All audiences (except current students) | Must display listed social links. <br /> https://www.facebook.com/uniofqld <br /> https://www.linkedin.com/school/university-of-queensland/ <br /> https://x.com/uq_news <br /> https://www.youtube.com/user/universityqueensland  <br /> https://www.instagram.com/uniofqld/ <br /> https://www.tiktok.com/@uniofqld                                                 |
-| **International only** <br /> All audiences (except current students)       | Must display listed social links. <br /> https://www.facebook.com/uniofqld <br /> https://www.linkedin.com/school/university-of-queensland/ <br /> https://www.youtube.com/user/universityqueensland  <br /> https://www.instagram.com/uniofqld/ <br /> https://www.tiktok.com/@uniofqld <br /> https://weibo.com/myuq <br /> Add Rednote social account when created |
-| **Domestic & International** <br /> Current students                        | Recommended Social links. <br /> Can display custom, faculty specific links. <br /> https://www.facebook.com/uqlife/ <br /> https://www.instagram.com/uqlife/ <br /> https://www.youtube.com/@uqstudentservices/featured  <br /> https://x.com/uq_news                                                                                                                |
-
-### Block footer
-
-Used in non-social/marketing/mailing list emails to separate content from the footer.
+<table>
+  <thead>
+    <tr>
+      <th>Audience</th>
+      <th>Social links</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>
+        <strong>Domestic & International</strong> <br />
+        All audiences (except current students) - Recommended social links. -
+        Can display custom, faculty specific links. - Maximum 1 social account
+        per platform - Maximum 7 social links
+      </td>
+      <td>
+        - https://www.facebook.com/uqlife/ - https://www.instagram.com/uqlife/ -
+        https://www.youtube.com/@uqstudentservices/featured -
+        https://x.com/uq_news
+      </td>
+    </tr>
+  </tbody>
+</table>
 
 ## Content structure
 
 Properly structuring your content is essential to ensure maximum accessibility and readability for your audience.
 
-### Intro
-
-The intro should be attention-grabbing and action-oriented, summarising the email’s main message.
-Includes a headline, an optional description and/or call to action.
-
-### Body section
-
-Clearly communicate the email’s purpose.
-Use headings, lists, and concise paragraphs for better readability.
-Optional – add relevant images to enhance engagement.
-
-### Content structure
+### layout
 
 - Left-align all content.
-- Use sentence case for headings.
-- Follow a clear heading structure.
-- More helpful guidelines on ensuring your content is accessible: [Accessibility author checklist]
+- Use headings, lists, and concise paragraphs for better readability.
 
-### Call to actions (CTA)
+### Call to actions (CTAs) and in-text hyperlinks
 
-- Use a single, prominent CTA button.
+- Limit the number of CTAs: 1 primary action helps avoid overwhelming recipients.
 - Use secondary or tertiary style CTAs (ie. outline buttons or text links) for any additional calls to action.
-- Write clear, action-oriented text ie. ‘Book a call back’ rather than ‘Learn more’.
+- Use descriptive link text: “Download the guide” or “Access the course materials” rather than “Click here.”
 
 ### Imagery
 
-- Optional – include images only if they add value to the content and align with the email’s purpose.
-- Use images from the UQ Digital Asset Management (DAM) system. If you need to source images from elsewhere, you must obtain approval from the M&C Brand team: brand@uq.edu.au
-- Avoid embedding text within images to maintain accessibility (exceptions to this must be approved by the M&C Brand team: brand@uq.edu.au).
-- Include descriptive alternative text to ensure accessibility and meaningful context if images don’t load (avoid generic labels like ‘image’).
+- Using images effectively in emails is about purpose, accessibility, and relevance—not just visual appeal. Images should:
 
-**Helpful links:**
+  - add value or enhance engagement
+  - support the message, not distract from it.
 
-- [UQ written style guide]
-- [Accessibility author checklist]
+- When to use images:
+
+  - Images work best in Category 3 emails (e.g., newsletters or promotional content)
+  - Categories 1 and 2 (critical or action-driven emails) should prioritise clear, text-based communication.
+
+- Provide descriptive alt text:
+
+  - Example: “Student reading in the UQ Library” – tells visually impaired users what’s in the image
+  - Less effective: “Image” – provides no useful context
+
+- Avoid text within images:
+  - Screen readers can’t interpret embedded text, making text in images inaccessible to some users. Instead, keep important content as actual text in the email body to ensure everyone can read it.
+
+### Helpful links
+
+- Best practise guidelines for email and SMS
+- UQ written style guide
+- Accessibility author checklist
 
 ## Technical guidelines
 
@@ -379,14 +330,6 @@ Keep these technical guidelines in mind when testing your emails.
 
 A high percentage of users open emails on their mobile devices first. Make sure your email layout is responsive and easy to scan on smaller screens and confirm that images and text scale properly for a condensed format.
 
-### Write clear preheader text
-
-The preheader is a snippet of text that appears after the subject line in many inboxes. Use it to complement or reinforce the subject line, giving recipients more context before they open the email.
-
-### Provide a fallback salutation
-
-If personalisation merges fail, include a default greeting (ie. ‘Dear Student’) to maintain a professional and personal tone even if dynamic content doesn’t load.
-
 ### Test emails across multiple email clients and devices
 
 Ensuring consistent formatting and functionality across different email clients (such as Gmail and Outlook) and platforms (iOS and Android) enhances user experience and credibility. Always conduct thorough cross-platform testing.
@@ -394,25 +337,3 @@ Ensuring consistent formatting and functionality across different email clients 
 ### Plan for images being blocked
 
 Some email providers or users block images by default, include HTML-based text for all critical information. Use alternative text to convey key messages when images don’t display, ensuring recipients still receive important details.
-
-## To create a new template in Vision6:
-
-1.  Click **Messages** in left menu.
-2.  Click **New Message**.
-3.  Click **More Options > Use HTML**.
-4.  In the WYSIWYG editor, click the **HTML** button in the control panel.
-5.  Copy and paste the full template HTML from the Design System into the HTML editor of Vision6. Click **Update**.
-6.  Click the dropdown arrow next to the **Save** button. Click **Save as template** and give the template an appropriate name.
-7.  On the next screen where it asks whether you wish to “clean” the message, select **Don’t Clean** and click **Continue**.
-    **IMPORTANT:** Whenever Vision6 asks you to clean the message, always select **Don’t Clean**.
-
-This template can now be selected when creating a new message.
-
-## To update footer content:
-
-Once a new message has been saved, the correct footer information must be added.
-To do this:
-
-1.  Click **Messages** in left menu.
-2.  Find your message in the list and click the **3-dot icon** on the far right. Then click **Footer details**.
-3.  Copy and paste the footer content from the Design System into the **Sender contact details** area of the Footer Details panel. Click **Save changes**.
